force-app/main/default/objects/Zendesk__Zendesk_Ticket_Comment__c.object
<CustomObject>
    <description>Holds the comments for a Zendesk Support Ticket</description>
    <fields>
        <fullName>Zendesk__Zendesk_Ticket__c</fullName>
        <label>Zendesk Support Ticket</label>
        <referenceTo>Zendesk__Zendesk_Ticket__c</referenceTo>
        <relationshipLabel>Zendesk Support Ticket Comments</relationshipLabel>
        <relationshipName>Zendesk_Ticket_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zendesk__author__c</fullName>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk__comment_ID__c</fullName>
        <externalId>true</externalId>
        <label>Comment ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk__created_at__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk__is_public__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Public</label>
        <type>Checkbox</type>
    </fields>
    <label>Zendesk Support Ticket Comment</label>
    <nameField>
        <label>Zendesk Support Ticket Comment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Support Ticket Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>